--- a/Metro/MVVMHelpers.Metro/Julmar.Metro.Helpers.csproj
+++ b/Metro/MVVMHelpers.Metro/Julmar.Metro.Helpers.csproj
@@ -9,7 +9,7 @@
     <ProjectGuid>{B640DE74-ACEB-4A7D-9FC5-14F58E63921F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>System.Windows</RootNamespace>
+    <RootNamespace>JulMar.Windows</RootNamespace>
     <AssemblyName>JulMar.Metro.Helpers</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
@@ -110,9 +110,11 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Behaviors\BindableCommand.cs" />
     <Compile Include="Behaviors\EventCommander.cs" />
     <Compile Include="Behaviors\NameScopeBinding.cs" />
     <Compile Include="Behaviors\StyleSetter.cs" />
+    <Compile Include="Collections\CollectionSubset.cs" />
     <Compile Include="Collections\ObservableDictionary.cs" />
     <Compile Include="Collections\WeakReferenceList.cs" />
     <Compile Include="Concurrency\ObjectLockExtensions.cs" />
@@ -133,13 +135,22 @@
     <Compile Include="Converters\ToStringConverter.cs" />
     <Compile Include="Extensions\CollectionExtensions.cs" />
     <Compile Include="Extensions\DependencyObjectExtensions.cs" />
+    <Compile Include="Extensions\Designer.cs" />
     <Compile Include="Extensions\ExceptionExtensions.cs" />
     <Compile Include="Extensions\NotifyPropertyHelpers.cs" />
+    <Compile Include="Extensions\TaskExtensions.cs" />
     <Compile Include="Interfaces\IDelegateCommand.cs" />
     <Compile Include="Interfaces\IMessageMediator.cs" />
     <Compile Include="Interfaces\IMessageVisualizer.cs" />
+    <Compile Include="Interfaces\INavigationAware.cs" />
+    <Compile Include="Interfaces\IPageNavigator.cs" />
     <Compile Include="Interfaces\IServiceLocator.cs" />
-    <Compile Include="Interfaces\MessageVisualizerOptions.cs" />
+    <Compile Include="IO\RandomAccessStream.cs" />
+    <Compile Include="IO\StreamExtensions.cs" />
+    <Compile Include="Services\PageNavigator.cs" />
+    <Compile Include="UI\AccessKey.cs" />
+    <Compile Include="UI\InputBinding.cs" />
+    <Compile Include="UI\MessageVisualizerOptions.cs" />
     <Compile Include="Internal\DefaultExportDescriptorProvider.cs" />
     <Compile Include="MessageMediatorTargetAttribute.cs" />
     <Compile Include="Mvvm\AsyncDelegateCommand.cs" />
