--- a/Julmar.Wpf.Helpers/Julmar.Wpf.Behaviors/Julmar.Wpf.Behaviors (4.0).csproj
+++ b/Julmar.Wpf.Helpers/Julmar.Wpf.Behaviors/Julmar.Wpf.Behaviors (4.0).csproj
@@ -66,6 +66,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Expression.Interactions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Microsoft SDKs\Expression\Blend\.NETFramework\v4.0\Libraries\Microsoft.Expression.Interactions.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -79,6 +83,7 @@
   <ItemGroup>
     <Compile Include="Actions\ApplyEffect.cs" />
     <Compile Include="Actions\ChangeThemeAction.cs" />
+    <Compile Include="Actions\GotoVisualStateAction.cs" />
     <Compile Include="Actions\InvokeCommand.cs" />
     <Compile Include="Actions\SelectAllTextAction.cs" />
     <Compile Include="Actions\SetFocusAction.cs" />
